@@ -491,6 +491,11 @@ if compiler.has_header('locale.h')
     description : 'Define to 1 if you have the <locale.h> header')
 endif
 
+if compiler.has_header('locale.h')
+  conf.set('HAVE_LOCALE_H', 1,
+    description : 'Define to 1 if you have the <locale.h> header')
+endif
+
 # set more warnings.
 #
 
